    This was part of the cause of #865015
  * Fix up the root password in /etc/shadow so that the live installer
    will set it properly. This is the cause of #866206
  * Add myself to Uploaders
  * Fix up usage of python-apt when there is more than one version of a
    package available.
  * When using base debs, add them to the sources list too.

 -- Steve McIntyre <93sam@debian.org>  Wed, 19 Jul 2017 15:12:45 +0100

live-wrapper (0.6+nmu2) unstable; urgency=medium

  * Non-maintainer upload.
  * Remove incorrect instance of converting to UTF-8.
  * Eliminate 'pyversions' warnings at build time.
  * Add 'python-requests' build dependency. Fixes docs build.
  * Add 'squashfs-tools' dependency. (Closes: #867282).

 -- Phil Wyett <philwyett@kathenas.org>  Fri, 14 Jul 2017 04:43:06 +0100

live-wrapper (0.6+nmu1) unstable; urgency=medium

  * Non-maintainer upload.
  * Add a dependency on python-pycurl, needed by lwr (closes: #861994)
  * Add Build-Depends: python-apt, python-cliapp, vmdebootstrap needed to
    completely build the lwr autodoc

 -- Florian Schlichting <fsfs@debian.org>  Tue, 16 May 2017 23:31:36 +0200

live-wrapper (0.6) unstable; urgency=medium

  [ Ana C. Custura ]
  * Removed memtest86+ and HDT due to compatibility issues with EFI boot
    (Closes: #813527, #846637)
  * Added main menu title and submenu generation for bootloaders
  * Added localised live boot options
  * Added installer with speech synthesis boot option
  * Fixed issues with graphical installer on isolinux boot (Closes: #846631)

  [ Iain R. Learmonth ]
  * lwr binary is now a generated entry point
  * Added --di-daily to allow selection of d-i URLs for daily builds (Closes:
    #846303)
  * Documentation has been updated to show how to choose an alternative build
    directory (Closes: #850763)
  * Documentation updated to show how attach a USB device to QEMU (Closes:
    #846632)
  * python-distro-info is now used to resolve codenames to suites (Closes:
    #846304)
