@@ -34,6 +34,8 @@ live-wrapper (0.7) UNRELEASED; urgency=medium
   * Fix up usage of python-apt when there is more than one version of a
     package available.
   * When using base debs, add them to the sources list too.
+  * Add extra packages needed for braille and speech support.
+    Closes: #863177
 
  -- Steve McIntyre <93sam@debian.org>  Wed, 19 Jul 2017 15:12:45 +0100
 
